[gd_scene load_steps=4 format=2]

[ext_resource path="res://lobby/Lobby.gd" type="Script" id=1]
[ext_resource path="res://ui/chat_panel/ChatPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://GlobalTheme.tres" type="Theme" id=3]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 56.0
margin_top = 104.0
margin_right = 968.0
margin_bottom = 496.0

[node name="CharacterSelectionScreen" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 912.0
margin_bottom = 39.0
text = "< Character Selection Screen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 43.0
margin_right = 912.0
margin_bottom = 93.0
rect_min_size = Vector2( 0, 50 )

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 97.0
margin_right = 912.0
margin_bottom = 392.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 670.0
margin_bottom = 295.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 670.0
margin_bottom = 33.0
text = "Players and Connection"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 670.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 670.0
margin_bottom = 295.0

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 506.0
margin_bottom = 254.0

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_right = 506.0
margin_bottom = 80.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer2"]
margin_right = 166.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="ServerLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer2/VBoxContainer"]
margin_right = 166.0
margin_bottom = 33.0
text = "Server"

[node name="ServerAddressField" type="LineEdit" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer2/VBoxContainer"]
margin_top = 37.0
margin_right = 166.0
margin_bottom = 80.0
text = "127.0.0.1"

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer2"]
margin_left = 170.0
margin_right = 336.0
margin_bottom = 80.0

[node name="PortLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer2/VBoxContainer2"]
margin_right = 166.0
margin_bottom = 33.0
text = "Port"

[node name="PortNumberField" type="LineEdit" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer2/VBoxContainer2"]
margin_top = 37.0
margin_right = 166.0
margin_bottom = 80.0
text = "8181"

[node name="VBoxContainer3" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer2"]
margin_left = 340.0
margin_right = 506.0
margin_bottom = 80.0

[node name="MaxClientsLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer2/VBoxContainer3"]
margin_right = 166.0
margin_bottom = 33.0
text = "Max"

[node name="MaxClientsField" type="LineEdit" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer2/VBoxContainer3"]
margin_top = 37.0
margin_right = 166.0
margin_bottom = 80.0
text = "5"

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 84.0
margin_right = 506.0
margin_bottom = 84.0

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 88.0
margin_right = 506.0
margin_bottom = 168.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer3"]
margin_right = 336.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="PlayerNameLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer3/VBoxContainer"]
margin_right = 336.0
margin_bottom = 33.0
text = "Player Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerNameField" type="LineEdit" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer3/VBoxContainer"]
margin_top = 37.0
margin_right = 336.0
margin_bottom = 80.0

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer3"]
margin_left = 340.0
margin_right = 506.0
margin_bottom = 80.0

[node name="GameTimeLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer3/VBoxContainer2"]
margin_right = 166.0
margin_bottom = 33.0
text = "Game Time"

[node name="GameTimeField" type="LineEdit" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer3/VBoxContainer2"]
margin_top = 37.0
margin_right = 166.0
margin_bottom = 80.0
text = "60"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 172.0
margin_right = 506.0
margin_bottom = 211.0
size_flags_vertical = 0

[node name="Host" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
margin_right = 64.0
margin_bottom = 39.0
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
margin_left = 68.0
margin_right = 438.0
margin_bottom = 39.0
size_flags_horizontal = 3

[node name="Join" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
margin_left = 442.0
margin_right = 506.0
margin_bottom = 39.0
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGameButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 215.0
margin_right = 506.0
margin_bottom = 254.0
text = "Start / Resume Game"

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 510.0
margin_right = 510.0
margin_bottom = 254.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 514.0
margin_right = 670.0
margin_bottom = 254.0

[node name="Players" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 156.0
margin_bottom = 33.0
text = "Players List"

[node name="PlayersConnectedList" type="ItemList" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 37.0
margin_right = 156.0
margin_bottom = 254.0
size_flags_vertical = 3
items = [ "Player 1", null, false, "Player 2", null, false, "Player 3", null, false ]
auto_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 674.0
margin_right = 674.0
margin_bottom = 295.0

[node name="ChatPanel" parent="CenterContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 678.0
margin_right = 912.0
margin_bottom = 295.0

[connection signal="pressed" from="CenterContainer/VBoxContainer/CharacterSelectionScreen" to="." method="_on_CharacterSelectionScreen_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/StartGameButton" to="." method="_on_StartGameButton_pressed"]
